--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "guider",
+    "CollectionName": "places_clear"
   }
+
 }
