--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "MongoDBSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "test",
-    "CollectionName": "places"
+    "DatabaseName": "guider",
+    "CollectionName": "places_clear"
   }
 
 }
