--- a/Guider.API.MVP/Guider.API.MVP.csproj
+++ b/Guider.API.MVP/Guider.API.MVP.csproj
@@ -6,6 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
+
+
   <ItemGroup>
     <Content Remove="appsettings.Development.json" />
   </ItemGroup>
