--- a/Guider.API.MVP/Guider.API.MVP.csproj
+++ b/Guider.API.MVP/Guider.API.MVP.csproj
@@ -17,6 +17,13 @@
     <Content Remove="appsettings.Development.json" />
   </ItemGroup>
 
+
+
+  <ItemGroup>
+    <None Remove="gitattributes" />
+    <None Remove="gitignore" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
