--- a/.gitignore
+++ b/.gitignore
@@ -494,3 +494,5 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 /Guider.API.MVP/appsettings.Development.json
+/Guider.API.MVP/gitignore
+/Guider.API.MVP/gitattributes
