configure for many mongodb collections l

--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -5,16 +5,33 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  // old local connection for places_clear collection
   //"MongoDBSettings": {
   //  "ConnectionString": "mongodb://localhost:27017",
   //  "DatabaseName": "guider",
   //  "CollectionName": "places_clear"
   //}
+
+  // old remote connection for places_clear collection
+  //"MongoDBSettings": {
+  //  "ConnectionString": "mongodb://admin:guideradmin@46.202.178.172:27017/test",
+  //  "DatabaseName": "guider",
+  //  "CollectionName": "places_clear"   
+  //},
+
+  // new remote connection for collections
   "MongoDBSettings": {
     "ConnectionString": "mongodb://admin:guideradmin@46.202.178.172:27017/test",
     "DatabaseName": "guider",
-    "CollectionName": "places_clear"
+    "Collections": {
+      "Places": "places_clear",
+      "Cities": "cities",
+      "Provinces": "provinces",
+      "Tags": "tags"
+    }
   },
+
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgreSQL": "Host=localhost;Port=5432;Database=guider_db;Username=guider_user;Password=Admin123*"
