add province controller

--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -25,7 +25,7 @@
     "DatabaseName": "guider",
     "Collections": {
       "Places": "places_clear",
-      "Cities": "cities",
+      "Cities": "provinces_cities",
       "Provinces": "provinces",
       "Tags": "tags"
     }
