add image controller

--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "StaticFiles": {
+    "ImagesPath": "wwwroot/images"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
