--- a/.gitignore
+++ b/.gitignore
@@ -497,3 +497,4 @@ $RECYCLE.BIN/
 /Guider.API.MVP/appsettings.Development.json
 /Guider.API.MVP/gitignore
 /Guider.API.MVP/gitattributes
+/Guider.API.MVP/wwwroot/images/negros/dumaguete
