--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -29,7 +29,8 @@
     "DatabaseName": "guider",
     "Collections": {
       "Places": "places_clear",
-      "Cities": "provinces_cities",
+      // "Cities": "provinces_cities",
+      "Cities": "cities",
       "Provinces": "provinces",
       "Tags": "tags"
     }
