Disabled code for legacy tag collection

--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -32,7 +32,8 @@
       // "Cities": "provinces_cities",
       "Cities": "cities",
       "Provinces": "provinces",
-      "Tags": "tags"
+      //"Tags": "tags"
+      "Tags": "tags_clear"
     }
   },
 
