change routes for management images

--- a/.gitignore
+++ b/.gitignore
@@ -544,3 +544,4 @@ Thumbs.db
 /Guider.API.MVP/setup_local_script.sh
 /Guider.API.MVP/.env .docker
 /Guider.API.MVP/readme.txt
+/Guider.API.MVP/wwwroot/images/string/string/string/string.png
