--- a/.gitignore
+++ b/.gitignore
@@ -545,3 +545,4 @@ Thumbs.db
 /Guider.API.MVP/.env .docker
 /Guider.API.MVP/readme.txt
 /Guider.API.MVP/wwwroot/images/string/string/string/string.png
+/Guider.API.MVP/README-Development.md
