clean code for create image

--- a/.gitignore
+++ b/.gitignore
@@ -546,3 +546,4 @@ Thumbs.db
 /Guider.API.MVP/readme.txt
 /Guider.API.MVP/wwwroot/images/string/string/string/string.png
 /Guider.API.MVP/README-Development.md
+/Guider.API.MVP/wwwroot/images/string/string/string/string2.png
