fix bug with isactive

--- a/.gitignore
+++ b/.gitignore
@@ -547,3 +547,8 @@ Thumbs.db
 /Guider.API.MVP/wwwroot/images/string/string/string/string.png
 /Guider.API.MVP/README-Development.md
 /Guider.API.MVP/wwwroot/images/string/string/string/string2.png
+/Guider.API.MVP/appsettings.Development.json
+/Guider.API.MVP/appsettings.Development.json
+/Guider.API.MVP/appsettings.Development.json
+/Guider.API.MVP/wwwroot/images/string/string/string/string1.png
+/Guider.API.MVP/wwwroot/images/string/string/string/string3.png
