fix bug with delete images

--- a/Guider.API.MVP/appsettings.Development.json
+++ b/Guider.API.MVP/appsettings.Development.json
@@ -25,7 +25,8 @@
 
   // new remote connection for collections
   "MongoDBSettings": {
-    "ConnectionString": "mongodb://admin:guideradmin@46.202.178.172:27017/test",
+    //"ConnectionString": "mongodb://admin:guideradmin@46.202.178.172:27017/test",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "guider",
     "Collections": {
       "Places": "places_clear",
@@ -33,7 +34,8 @@
       "Cities": "cities",
       "Provinces": "provinces",
       //"Tags": "tags"
-      "Tags": "tags_clear"
+      "Tags": "tags_clear",
+      "Images":  "images"
     }
   },
 
