clean code imge service interface

--- a/.gitignore
+++ b/.gitignore
@@ -552,3 +552,4 @@ Thumbs.db
 /Guider.API.MVP/appsettings.Development.json
 /Guider.API.MVP/wwwroot/images/string/string/string/string1.png
 /Guider.API.MVP/wwwroot/images/string/string/string/string3.png
+/Guider.API.MVP/wwwroot/images/string/string/string/string5.png
