fix bugs for upload images and add limit size

--- a/.gitignore
+++ b/.gitignore
@@ -553,3 +553,4 @@ Thumbs.db
 /Guider.API.MVP/wwwroot/images/string/string/string/string1.png
 /Guider.API.MVP/wwwroot/images/string/string/string/string3.png
 /Guider.API.MVP/wwwroot/images/string/string/string/string5.png
+/Guider.API.MVP/wwwroot/images/string/string/string/string10.png
