--- a/.gitignore
+++ b/.gitignore
@@ -564,3 +564,4 @@ Thumbs.db
 /Guider.API.MVP/wwwroot/images/Guanacaste/playa_del_coco/Zi Lounge/Zi Lounge main 3.jpg
 /.gitignore
 *.jpg
+/Guider.API.MVP/wwwroot/images/Guanacaste/sardinal/frespan/test.png
