--- a/.gitignore
+++ b/.gitignore
@@ -565,3 +565,4 @@ Thumbs.db
 /.gitignore
 *.jpg
 /Guider.API.MVP/wwwroot/images/Guanacaste/sardinal/frespan/test.png
+/Guider.API.MVP/wwwroot/images/Guanacaste/playa_del_coco/hacienda_el_viejo_wetlands/waterfall-on-el-viego-wetlands.png
