--- a/.gitignore
+++ b/.gitignore
@@ -567,3 +567,4 @@ Thumbs.db
 /Guider.API.MVP/wwwroot/images/Guanacaste/sardinal/frespan/test.png
 /Guider.API.MVP/wwwroot/images/Guanacaste/playa_del_coco/hacienda_el_viejo_wetlands/waterfall-on-el-viego-wetlands.png
 /Guider.API.MVP/appsettings.Development.json
+/Guider.API.MVP/.gitignore
