upgrade project for use env variables and fix bug with minio

--- a/.gitignore
+++ b/.gitignore
@@ -568,3 +568,12 @@ Thumbs.db
 /Guider.API.MVP/wwwroot/images/Guanacaste/playa_del_coco/hacienda_el_viejo_wetlands/waterfall-on-el-viego-wetlands.png
 /Guider.API.MVP/appsettings.Development.json
 /Guider.API.MVP/.gitignore
+/Guider.API.MVP/.env.local-old
+/Guider.API.MVP/appsettings.Development.json
+/Guider.API.MVP/.env.local.new
+/Guider.API.MVP/.env.local
+/Guider.API.MVP/.env.local.example
+/Guider.API.MVP/.env.local-old
+/Guider.API.MVP/.env
+/.gitignore
+/.gitignore
