--- a/Guider.API.MVP/Guider.API.MVP.csproj
+++ b/Guider.API.MVP/Guider.API.MVP.csproj
@@ -15,15 +15,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="HiddenFiles\**" />
     <Compile Remove="wwwroot\images\Guanacaste\**" />
     <Compile Remove="wwwroot\images\Negros\**" />
     <Compile Remove="wwwroot\images\string\**" />
+    <Content Remove="HiddenFiles\**" />
     <Content Remove="wwwroot\images\Guanacaste\**" />
     <Content Remove="wwwroot\images\Negros\**" />
     <Content Remove="wwwroot\images\string\**" />
+    <EmbeddedResource Remove="HiddenFiles\**" />
     <EmbeddedResource Remove="wwwroot\images\Guanacaste\**" />
     <EmbeddedResource Remove="wwwroot\images\Negros\**" />
     <EmbeddedResource Remove="wwwroot\images\string\**" />
+    <None Remove="HiddenFiles\**" />
     <None Remove="wwwroot\images\Guanacaste\**" />
     <None Remove="wwwroot\images\Negros\**" />
     <None Remove="wwwroot\images\string\**" />
