--- a/.gitignore
+++ b/.gitignore
@@ -580,3 +580,4 @@ Thumbs.db
 /Guider.API.MVP/env_production.sh
 /Guider.API.MVP/Dockerfile - old
 /Guider.API.MVP/.env .local.old
+/Guider.API.MVP/HiddenFiles/.env .docker
