--- a/.gitignore
+++ b/.gitignore
@@ -581,3 +581,4 @@ Thumbs.db
 /Guider.API.MVP/Dockerfile - old
 /Guider.API.MVP/.env .local.old
 /Guider.API.MVP/HiddenFiles/.env .docker
+/Guider.API.MVP/.env.docker
