upgrade load env file and upgrade check exist file on s3 minio

--- a/.gitignore
+++ b/.gitignore
@@ -582,3 +582,4 @@ Thumbs.db
 /Guider.API.MVP/.env .local.old
 /Guider.API.MVP/HiddenFiles/.env .docker
 /Guider.API.MVP/.env.docker
+/Guider.API.MVP/.env.local
