fix bugs with connection S3 Minio

--- a/.gitignore
+++ b/.gitignore
@@ -583,3 +583,4 @@ Thumbs.db
 /Guider.API.MVP/HiddenFiles/.env .docker
 /Guider.API.MVP/.env.docker
 /Guider.API.MVP/.env.local
+/Guider.API.MVP/HiddenFiles/.env.docker
