--- a/Guider.API.MVP/Guider.API.MVP.csproj
+++ b/Guider.API.MVP/Guider.API.MVP.csproj
@@ -33,6 +33,10 @@
     <None Remove="wwwroot\images\string\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Controllers\FileController.cs" />
+  </ItemGroup>
+
 
 
   <ItemGroup>
