Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   - pull
   - deploy
 
-# обе стадии запускаются по очереди нажатием кнопки
+# обе стадии запускаются по очереди нажатием кнопки во вкладке pipelines
 pull:
   stage: pull
   tags:
