Update .gitlab-ci.yml file, make a pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   - pull
   - deploy
 
-# обе стадии запускаются по очереди нажатием кнопки во вкладке pipelines
+# обе стадии запускаются по очереди нажатием кнопки во вкладке pipelines, логи можно увидеть там же
 pull:
   stage: pull
   tags:
