--- a/Guider.API.MVP/Dockerfile
+++ b/Guider.API.MVP/Dockerfile
@@ -7,31 +7,26 @@ USER root
 RUN mkdir -p /app && chown -R app:app /app
 USER app
 WORKDIR /app
-#EXPOSE 8080
 EXPOSE 8081
+
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0-noble AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Guider.API.MVP/Guider.API.MVP.csproj", "Guider.API.MVP/"]
-RUN dotnet restore "./Guider.API.MVP/Guider.API.MVP.csproj"
+COPY ["Guider.API.MVP.csproj", "./"]
+RUN dotnet restore "Guider.API.MVP.csproj"
 COPY . .
-WORKDIR "/src/Guider.API.MVP"
-RUN dotnet build "./Guider.API.MVP.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "Guider.API.MVP.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Guider.API.MVP.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Guider.API.MVP.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-
-# Копируем .env.docker файл в контейнер
-#COPY .env.docker .env.docker
 
 # Копируем все доступные .env файлы в контейнер
 # Docker автоматически пропустит несуществующие файлы при использовании wildcards
@@ -39,7 +34,6 @@ COPY .env* ./
 
 # Устанавливаем переменные окружения по умолчанию для ASP.NET Core
 ENV ASPNETCORE_ENVIRONMENT=Development
-#ENV ASPNETCORE_URLS=http://+:8080;https://+:8081
 ENV ASPNETCORE_URLS=https://+:8081
 ENV ASPNETCORE_HTTPS_PORT=8081
 
