--- a/.gitignore
+++ b/.gitignore
@@ -592,3 +592,4 @@ Thumbs.db
 /Guider.API.MVP/HiddenFiles/Dockerfile
 /Guider.API.MVP/HiddenFiles/.env.local.old
 /Guider.API.MVP/HiddenFiles/.env.old
+/Guider.API.MVP/Dockerfile
