Update .gitlab-ci.yml file, make a pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,10 @@ pull:
     - pwd
     - git pull https://$CI_REGISTRY_USER:$CI_REGISTRY_PASSWORD@gtl.guider.pro/guider/backend/dotnet_mongodb/
     - git log --oneline -15
-  only:
-    variables:
-      - $CI_COMMIT_MESSAGE =~ /make a pipeline/
-  when: manual
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "dev" && $CI_COMMIT_MESSAGE =~ /make a pipeline/'
+      when: manual
+    - when: never
 
 deploy:
   stage: deploy
@@ -32,7 +32,7 @@ deploy:
     - cd /home/$HOST
     - docker compose down dotnet-mongo-api
     - TAG=$VERSION docker compose up -d --build dotnet-mongo-api
-  only:
-    variables:
-      - $CI_COMMIT_MESSAGE =~ /make a pipeline/
-  when: manual
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "dev" && $CI_COMMIT_MESSAGE =~ /make a pipeline/'
+      when: always
+    - when: never
