--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,5 +34,5 @@ deploy:
     - TAG=$VERSION docker compose up -d --build dotnet-mongo-api
   rules:
     - if: '$CI_COMMIT_BRANCH == "dev" && $CI_COMMIT_MESSAGE =~ /make a pipeline/'
-      when: always
+      when: manual
     - when: never
